# PyFMIndex

./: .envrc  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.py  install.bash  pyfmindex.py  pyproject.toml
lib/AvxWindowFmIndex/: CMakeLists.txt
pyfmindex/: __init__.py  _pyfmindex.py  pyfmindex.py
src/: pyfmindex.py
src/DNAFMIndex/: __init__.py  _dna_fm_index.py  dna_fm_index.py
tests/: test_index.py
