[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DNAFMIndex"
authors = [
    {name = "mehelborn", email = "mr.4uldum@gmail.com"},
    {name = "notc19", email = "ael.mak1504@gmail.com"}
]
version = "0.1.0"
description = "Python wrapper for AvxWindowFmIndex library"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
keywords = ["DNA", "FM-index", "fasta", "bwt", "suffix array", "aligning"]
dependencies = []

[dependency-groups]
dev = [
    "debugpy",
    "pytest",
]

[project.urls]
Homepage = "https://pypi.org/project/DNAFMIndex/"
Repository = "https://github.com/Mehelborn/DNAFMIndex"

[tool.setuptools.package-data]
DNAFMIndex = ["lib/*"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
